--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -1,5 +1,5 @@
 # Microprofile server properties
-server.port=8085
+#server.port=8085
 #server.host=0.0.0.0
 
 # src/main/resources/WEB in your source tree
