--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -10,21 +10,9 @@ server.port=8085
 
 injected.value=Injected value
 value=lookup value
-user1.username=Aek
+user1.username=test1
 user1.age=20
 user1.workFlag=true
 
 #com.example.demo.client.Service/mp-rest/url=http://localhost:8180/data/client/service
 #serviceb.url=http://localhost:8180/data/protected
-
-
-#Datasource Configuration
-#spring.datasource.testWhileIdle = true
-#spring.datasource.validationQuery = SELECT 1 from dual
-
-#Connection Pool Configuration
-#spring.datasource.hikari.connectionTimeout=30000
-#spring.datasource.hikari.idleTimeout=600000
-#spring.datasource.hikari.maxLifetime=1800000
-#spring.datasource.hikari.maximumPoolSize=10
-#spring.datasource.hikari.schema=${db.schema:CHP}
