--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,7 @@
             <artifactId>orai18n</artifactId>
             <version>19.3.0.0</version>
         </dependency>
+        <!--        work with DATABASE-->
 
     </dependencies>
 
