--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,9 @@
+#Application Config
 server:
   port: 8085
 #  host: 0.0.0.0
+#Config Openapi
+openapi:
+  ui:
+    title: Helidon-Service
+    swaggerUiTheme: monoki
